--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,7 +11,8 @@
     "tab=np.array([[24,26],[29,5]])\n",
     "np.max(tab)\n",
     "tabi=np.zeros((6,2))\n",
-    "print(tabi)"
+    "print(tabi)\n",
+    "ca a plus rien à voir maintenant"
    ]
   },
   {
